# FX2LP

./: .gitignore  .gitmodules  README.md
firmwares/: CMakeLists.txt  README.md  move.sh
firmwares/firmwares/: CMakeLists.txt
firmwares/firmwares/endpoint/: main.c
firmwares/firmwares/fifo_ep6/: main.c
firmwares/firmwares/fifo_ep6_ports_bd/: main.c
firmwares/firmwares/led/: main.c
firmwares/firmwares/port_b_fifo_ep6/: main.c
firmwares/firmwares/ports/: main.c
firmwares/firmwares/portsABD/: main.c
firmwares/firmwares/serial/: main.c
softwares/: CMakeLists.txt  README.md
softwares/cpp_examples/: CMakeLists.txt
softwares/cpp_examples/fifo/: main.cc
softwares/cpp_examples/port_b_fifo_ep6/: main.cc
softwares/cpp_examples/raw_ep6/: main.cc
softwares/examples/: CMakeLists.txt
softwares/examples/endpoint/: main.c
softwares/examples/ep2/: main.c
softwares/examples/fifo_ep6/: main.c
softwares/examples/port_read/: main.c
softwares/examples/ports/: main.c
softwares/examples/readABD/: main.c
softwares/examples/ver/: main.c
softwares/include/FX2/: DumpWriter.h  FX2.h
